# LearnOpenGL2024

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
LearnOpenGL/shaders/: HelloTriangle.vert
LearnOpenGL/src/: Main.cpp
LearnOpenGL/src/Shader/: Shader.cpp  Shader.h
Resources/shaders/: HelloTriangle.frag  HelloTriangle.vert
